# split_array

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
